# py-testbed

./: CHANGELOGS.md  README.md
concepts/: README.md
concepts/webscraping/: README.md
libraries/: README.md
libraries/beautifulsoup4/projects/testbench-practiceground/: README.md  pyproject.toml
libraries/beautifulsoup4/projects/testbench-practiceground/src/testbench/: main.py
libraries/beautifulsoup4/projects/youtube/: README.md  USAGE.md  pyproject.toml
libraries/beautifulsoup4/projects/youtube/src/ytscripts/yt_obtain_url/: main.py
libraries/html/: README.md
libraries/html/projects/html-parser/: README.md  USAGE.md  pyproject.toml  requirements.txt
libraries/html/projects/html-parser/src/htmlparser/: main.py
